--- a/templates/actualizar.html
+++ b/templates/actualizar.html
@@ -6,7 +6,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
         <link rel="stylesheet" href={{ url_for('static', filename='/css/bootstrap.min.css') }}>
         <link rel="stylesheet" href={{ url_for('static', filename='/css/styles.css') }}>
-        <title>Add of Where2Buy</title>
+        <title>Actualizar Producto</title>
     </head>
     <body>
         <div class="registration-form"> 
@@ -19,17 +19,6 @@
                     <h2 style="color: #9fadca;text-align: center;padding: 0 0 15px;">Datos del Producto</h2>
                 </div>
                 <div class="form-group">
-                    <!--<input type="text" class="form-control item" id="categoria" placeholder="Categoria">-->
-                    <input type="text" class="form-control item" name="id" id="id" placeholder="Id del producto">                    
-                    <select type="text" class="form-control item" id="categoria" name="categoria" placeholder="Categoria">
-                        <option value="default" disabled selected>Elegir categoría de producto</option>
-                        <option value="frutasyverduras">Frutas y verduras</option>
-                        <option value="carnes">Carnes</option>
-                        <option value="bebidas">Bebidas</option>
-                        <option value="limpieza">Artículos de limpieza</option>
-                    </select>
-                </div>
-                <div class="form-group">
                     <input type="text" class="form-control item" name="nombre" id="nombre" placeholder="Nombre del producto">
                 </div>
                 <div class="form-group">
@@ -39,29 +28,16 @@
                     <input type="text" class="form-control item" name="precio" id="precio" placeholder="Precio">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control item" name="url" id="url" placeholder="URL">
+                    <input type="text" class="form-control item" name="stock" id="url" placeholder="Stock">
                 </div>
-                <!--<div class="social-media">
-                <h2>Subir imagen del producto</h2>
-              
-                <form method="post" action="/add_product" enctype="multipart/form-data">
-                    <dl>
-                        <p>
-                            <input type="file" name="files[]" multiple="true" autocomplete="off" required>
-                        </p>
-                    </dl>
-                    <div class="form-group">
-                    
-                        <button type="submit" class="btn btn-block create-account" onclick="create_product()">Añadir Producto</button>
-                    </div>
-                </form>
-                </div>-->
                 <button type="submit" value="Submit">Registrar</button>
             </form>
-                {% if message %}
-                    {{ message }}
+                {% if mensaje %}
+                        {{ mensaje }}
                 {% endif %}
+
         </div>
         <script type="text/javascript" src={{ url_for('static', filename='/js/libs/jquery-3.3.1.js') }}></script>
+        <script type="text/javascript" src={{ url_for('static', filename='/js/agregado.js') }}></script>
     </body>
 </html>
