--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>DBP20</title>
+    <title>Kusa Store</title>
     <style>
         .hidden {
             display: none;
