--- a/templates/shop.html
+++ b/templates/shop.html
@@ -46,8 +46,8 @@
         <div class="container">
             <header id="masthead" class="site-header">
                 <div class="site-branding">
-                    <h1 class="site-title"><a href="/" rel="home">Moschino</a></h1>
-                    <h2 class="site-description">Minimalist Portfolio HTML Template</h2>
+                    <h1 class="site-title"><a href="/" rel="home">Kusa Store</a></h1>
+                    <h2 class="site-description">Shop a large selection of officially licensed anime figures</h2>
                 </div>
                 <nav id="site-navigation" class="main-navigation">
                     <button class="menu-toggle">Menu</button>
@@ -59,6 +59,7 @@
                             <li><a href="/">Shop</a></li>
                             <li><a href="/">Blog</a></li>
                             <li><a href="/">Elements</a></li>
+                            <!--
                             <li><a href="#">Pages</a>
                                 <ul class="sub-menu">
                                     <li><a href="portfolio-item.html">Portfolio Item</a></li>
@@ -66,8 +67,8 @@
                                     <li><a href="shop-single.html">Shop Item</a></li>
                                     <li><a href="portfolio-category.html">Portfolio Category</a></li>
                                 </ul>
-                            </li>
-                            <li><a href="contact.html">Contact</a></li>
+                            </li>-->
+                            <li><a href="/">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -185,8 +186,8 @@
         <footer id="colophon" class="site-footer">
             <div class="container">
                 <div class="site-info">
-                    <h1 style="font-family: 'Herr Von Muellerhoff';color: #ccc;font-weight:300;text-align: center;margin-bottom:0;margin-top:0;line-height:1.4;font-size: 46px;">Moschino</h1>
-                    <a target="blank" href="https://www.wowthemes.net/">&copy; Moschino - Free HTML Template by WowThemes.net</a>
+                    <h1 style="font-family: 'Herr Von Muellerhoff';color: #ccc;font-weight:300;text-align: center;margin-bottom:0;margin-top:0;line-height:1.4;font-size: 46px;">Kusa Store</h1>
+                    <a target="blank" href="https://www.wowthemes.net/">&copy; Copyright 2021, Kusa Store</a>
                 </div>
             </div>
         </footer>
