--- a/templates/register.html
+++ b/templates/register.html
@@ -31,7 +31,7 @@
                 <input type="password" class="form-control item" name="password" id="password" placeholder="Password">
             </div>
             {% endwith %}
-            <button type="submit" value="Submit">Registrar</button>
+            <button class="btn btn-outline-dark btn-block register-account" type="submit" value="Submit">Registrar</button>
         </form>
         <div class="social-media">
             <h5>Sign up with social media</h5>
