--- a/templates/shop.html
+++ b/templates/shop.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Proyecto DBP</title>
+    <title>Kusa Store</title>
     <link rel='stylesheet' href={{ url_for('static', filename='css/woocommerce-layout.css' ) }} type='text/css' media='all' />
     <link rel='stylesheet' href={{ url_for('static', filename='css/woocommerce-smallscreen.css' )}} type='text/css' media='only screen and (max-width: 768px)' />
     <link rel='stylesheet' href={{ url_for('static', filename='css/woocommerce.css' )}} type='text/css' media='all' />
@@ -78,7 +78,7 @@
                 <div id="primary" class="content-area column full">
                     <main id="main" class="site-main" role="main">
                         <p class="woocommerce-result-count">
-                            Showing 1–8 of 12 results
+                            Showing results
                         </p>
                         <form class="woocommerce-ordering" method="get">
                             <select name="orderby" class="orderby">
@@ -168,6 +168,7 @@
                             </li>
                                 -->
                         </ul>
+                        <!--
                         <nav class="woocommerce-pagination">
                             <ul class="page-numbers">
                                 <li><span class="page-numbers current">1</span></li>
@@ -175,6 +176,7 @@
                                 <li><a class="next page-numbers" href="#">→</a></li>
                             </ul>
                         </nav>
+                        -->
                     </main>
                     <!-- #main -->
                 </div>
