--- a/templates/shop.html
+++ b/templates/shop.html
@@ -40,6 +40,14 @@
         </ul>
     </div>
 </nav>
+{% else %}
+<nav class="uk-navbar-container" uk-navbar>   
+    <div class="uk-navbar-right">
+        <ul class="uk-navbar-nav">
+            <li><a her="/login"><span class="uk-margin-small-right" uk-icon="icon:  sign-in; ratio: 2"></span></a></li>
+        </ul>
+    </div>
+</nav>
 {% endif %}
 <body class="archive post-type-archive post-type-archive-product woocommerce woocommerce-page">
     <div id="page">
