--- a/templates/agregarproducto.html
+++ b/templates/agregarproducto.html
@@ -6,6 +6,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
         <link rel="stylesheet" href={{ url_for('static', filename='/css/bootstrap.min.css') }}>
         <link rel="stylesheet" href={{ url_for('static', filename='/css/styles.css') }}>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/css/uikit.min.css" />
         <title>Crear Producto</title>
     </head>
     <body>
@@ -28,7 +29,10 @@
                     <input type="text" class="form-control item" name="precio" id="precio" placeholder="Precio">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control item" name="stock" id="url" placeholder="Stock">
+                    <input type="text" class="form-control item" name="stock" id="stock" placeholder="Stock">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control item" name="img_url" id="img_url" placeholder="Url">
                 </div>
                 <!--<div class="social-media">
                 <h2>Subir imagen del producto</h2>
@@ -48,11 +52,19 @@
                 <button type="submit" value="Submit">Registrar</button>
             </form>
                 {% if mensaje %}
-                        {{ mensaje }}
+                <script>           
+                    setTimeout(function(){
+                        UIkit.notification({
+                        message: '{{mensaje}}',
+                        status: 'danger'
+                        })
+                    }, 1000)
+                </script>
                 {% endif %}
-
         </div>
         <script type="text/javascript" src={{ url_for('static', filename='/js/libs/jquery-3.3.1.js') }}></script>
-        <script type="text/javascript" src={{ url_for('static', filename='/js/agregado.js') }}></script>
+        <script type="text/javascript" src={{ url_for('static', filename='/js/shop.js') }}></script>
+        <script src="https://cdn.jsdelivr.net/npm/uikit@latest/dist/js/uikit.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/uikit@latest/dist/js/uikit-icons.min.js"></script>
     </body>
 </html>
