--- a/templates/shop.html
+++ b/templates/shop.html
@@ -13,6 +13,7 @@
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Oswald:400,500,700%7CRoboto:400,500,700%7CHerr+Von+Muellerhoff:400,500,700%7CQuattrocento+Sans:400,500,700' type='text/css' media='all' />
     <link rel='stylesheet' href={{ url_for( 'static', filename='css/easy-responsive-shortcodes.css' ) }} type='text/css' media='all' />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/css/uikit.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 {% if current_user.is_authenticated %}
 <nav class="uk-navbar-container" uk-navbar>
@@ -44,7 +45,7 @@
 <nav class="uk-navbar-container" uk-navbar>   
     <div class="uk-navbar-right">
         <ul class="uk-navbar-nav">
-            <li><a her="/login"><span class="uk-margin-small-right" uk-icon="icon:  sign-in; ratio: 2"></span></a></li>
+            <li><a href="/login"><span class="uk-margin-small-right" uk-icon="icon:  sign-in; ratio: 2"></span></a></li>
         </ul>
     </div>
 </nav>
@@ -81,7 +82,61 @@
                     </div>
                 </nav>
             </header>
-            <!-- #masthead -->
+            <div class="uk-child-width-expand@s uk-text-center" uk-grid>
+                <div>
+                    <div class="uk-card uk-card-default uk-card-body uk-margin-remove"  style="width: 120%;">
+                        <div id="primary" class="content-area column full">
+                            <main id="main" class="site-main" role="main">
+                                <!--
+                                <p class="woocommerce-result-count">
+                                    Showing results
+                                </p>
+                                <form class="woocommerce-ordering" method="get">
+                                    <select name="orderby" class="orderby">
+                                <option value="menu_order" selected="selected">Default sorting</option>
+                                <option value="popularity">Sort by popularity</option>
+                                <option value="rating">Sort by average rating</option>
+                                <option value="date">Sort by newness</option>
+                                <option value="price">Sort by price: low to high</option>
+                                <option value="price-desc">Sort by price: high to low</option>
+                            </select>
+                                </form>-->
+                                <ul class="products">
+                                    {% if allproducts %} {% for product in allproducts %}
+                                    <li class="product">
+                                        {% if ifadmin %}
+                                            <a href="/deleteproduct?name={{product.nombre}}"><span style="margin-left: 150px;" uk-icon="icon: close; ratio: 1"></span></a>
+                                        {% endif %}
+                                        <a href="/singleproduct?name={{product.nombre}}">
+                                            <img src="{{ product.img_url }}" alt="">
+                                            <h3>{{ product.nombre }}</h3>
+                                            <span class="price"><span class="amount">${{ product.precio }}</span></span>
+                                        </a>
+                                        {% if not current_user.is_authenticated %}
+                                            <a href="/login" class="button">Add to cart</a>
+                                        {% elif ifcliente %}
+                                            <a id="{{product.nombre}}"  class="button" onclick="addtocart(this.id)">Add to cart</a>
+                                        {% endif %}
+                                    </li>
+                                    {% endfor %} {% endif %}
+                                </ul>
+                            </main>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div>
+                    <div class="uk-card uk-card-default uk-card-body" style="width: 85%; margin-left: 12%;">
+                        <ul id="carrito">
+                            <button onclick="comprar()">
+                                Comprar!
+                            </button>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!--
             <div id="content" class="site-content">
                 <div id="primary" class="content-area column full">
                     <main id="main" class="site-main" role="main">
@@ -99,16 +154,6 @@
 					</select>
                         </form>
                         <ul class="products">
-                            <!--
-                            <li class="first product">
-                                <a href="shop-single.html">
-                                    <span class="onsale">Sale!</span>
-                                    <img src="http://s3.amazonaws.com/caymandemo/wp-content/uploads/sites/10/2015/09/10175658/j4-520x520.jpg" alt="">
-                                    <h3>Cool Fedora</h3>
-                                    <span class="price"><span class="amount">$34.00</span></span>
-                                </a><a href="#" class="button">Add to cart</a>
-                            </li>
-                        -->
                             {% if allproducts %} {% for product in allproducts %}
                             <li class="product">
                                 {% if ifadmin %}
@@ -126,73 +171,13 @@
                                 {% endif %}
                             </li>
                             {% endfor %} {% endif %}
-                            <!--
-                            <li class="product">
-                                <a href="shop-single.html">
-                                    <img src="http://s3.amazonaws.com/caymandemo/wp-content/uploads/sites/10/2015/09/10175658/j1-520x780-520x600.jpg" alt="">
-                                    <h3>Black Jacket</h3>
-                                    <span class="price"><span class="amount">$125.00</span></span>
-                                </a><a href="#" class="button">Add to cart</a>
-                            </li>
-
-                            <li class="last product">
-                                <a href="shop-single.html">
-                                    <img src="http://s3.amazonaws.com/caymandemo/wp-content/uploads/sites/10/2015/09/10175658/j9-520x780-520x600.jpg" alt="">
-                                    <h3>Brown Jacket</h3>
-                                    <span class="price"><span class="amount">$28.00</span></span>
-                                </a><a href="#" class="button">Add to cart</a>
-                            </li>
-
-                            <li class="first product">
-                                <a href="shop-single.html">
-                                    <img src="http://s3.amazonaws.com/caymandemo/wp-content/uploads/sites/10/2015/09/10175658/j12-520x668-520x600.jpg" alt="">
-                                    <h3>Gray Blouse</h3>
-                                    <span class="price"><span class="amount">$15.00</span></span>
-                                </a><a href="#" class="button">Add to cart</a>
-                            </li>
-
-                            <li class="product">
-                                <a href="shop-single.html">
-                                    <img src="http://s3.amazonaws.com/caymandemo/wp-content/uploads/sites/10/2015/09/10175658/f11-520x755-520x600.jpg" alt="">
-                                    <h3>Male Bag</h3>
-                                    <span class="price"><span class="amount">$16.00</span></span>
-                                </a><a href="#" class="button">Add to cart</a>
-                            </li>
-
-                            <li class="product">
-                                <a href="shop-single.html">
-                                    <img src="http://s3.amazonaws.com/caymandemo/wp-content/uploads/sites/10/2015/09/10175658/j6-520x779-520x600.jpg" alt="">
-                                    <h3>Hugo Jeans</h3>
-                                    <span class="price"><span class="amount">$36.00</span></span>
-                                </a><a href="#" class="button">Add to cart</a>
-                            </li>
-
-                            <li class="last product">
-                                <a href="shop-single.html">
-                                    <img src="http://s3.amazonaws.com/caymandemo/wp-content/uploads/sites/10/2015/09/10175658/j2-520x780-520x600.jpg" alt="">
-                                    <h3>Male T-Shirt</h3>
-                                    <span class="price"><span class="amount">$49.00</span></span>
-                                </a><a href="#" class="button">Add to cart</a>
-                            </li>
-                                -->
                         </ul>
-                        <!--
-                        <nav class="woocommerce-pagination">
-                            <ul class="page-numbers">
-                                <li><span class="page-numbers current">1</span></li>
-                                <li><a class="page-numbers" href="#">2</a></li>
-                                <li><a class="next page-numbers" href="#">→</a></li>
-                            </ul>
-                        </nav>
-                        -->
                     </main>
-                    <!-- #main -->
                 </div>
-                <!-- #primary -->
             </div>
-            <!-- #content -->
+-->
+
         </div>
-        <!-- .container -->
         <footer id="colophon" class="site-footer">
             <div class="container">
                 <div class="site-info">
@@ -204,7 +189,7 @@
         <a href="#top" class="smoothup" title="Back to top"><span class="genericon genericon-collapse"></span></a>
     </div>
     <!-- #page -->
-    <script src={{ url_for( 'static', filename='js/jquery.js' )}}></script>
+    <!--<script src={{ url_for( 'static', filename='js/jquery.js' )}}></script>-->
     <script src={{ url_for( 'static', filename='js/shop.js' )}}></script>
     <script src={{ url_for( 'static', filename='js/plugins.js' )}}></script>
     <script src={{ url_for( 'static', filename='js/scripts.js' )}}></script>
