--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
+
 
     <LinearLayout
         android:layout_width="317dp"
@@ -14,14 +15,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginBottom="128dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/logo_id"
             android:layout_width="match_parent"
+            android:layout_marginTop="40dp"
             android:layout_height="191dp"
             app:srcCompat="@drawable/logo2"/>
 
@@ -55,6 +54,5 @@
                 android:text="@string/login"
                 android:onClick="onLoginClicked"/>
         </LinearLayout>
-
     </LinearLayout>
 </RelativeLayout>
