--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:layout_marginTop="40dp"
             app:srcCompat="@drawable/logo2" />
 
-        <EditText
+        <TextView
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
