--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -1,6 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:gravity="center"
+    tools:context=".CreateActivity">
+    <LinearLayout
+        android:layout_width="317dp"
+        android:layout_height="559dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/logo_id"
+            android:layout_width="match_parent"
+            android:layout_marginTop="40dp"
+            android:layout_height="191dp"
+            app:srcCompat="@drawable/logo2"/>
+
+        <EditText
+            android:id="@+id/txt_productname"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@android:dimen/app_icon_size"
+            android:inputType="text"
+            android:gravity="center"
+            android:hint="Nombre"
+            android:layout_gravity="center"/>
+
+        <EditText
+            android:id="@+id/txt_productdescrip"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:layout_gravity="center"
+            android:hint="Descripcion"
+            android:gravity="center"/>
+        <EditText
+            android:id="@+id/txt_productprice"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:layout_gravity="center"
+            android:hint="Precio"
+            android:gravity="center"/>
+        <EditText
+            android:id="@+id/txt_productstock"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:layout_gravity="center"
+            android:hint="Stock"
+            android:gravity="center"/>
+        <EditText
+            android:id="@+id/txt_productoimageurl"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:layout_gravity="center"
+            android:hint="URL de imagen"
+            android:gravity="center"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/crear"
+            android:onClick="onCreateProductClicked"/>
+        </LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
+
+
+<!--<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_height="match_parent"
+tools:context=".CreateActivity">
+<include layout="@layout/toolbar_main"
+    android:id="@+id/toolbar">
+</include>
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/main_recycle_view"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+</androidx.recyclerview.widget.RecyclerView>
+</androidx.constraintlayout.widget.ConstraintLayout>-->
